# homelab

./: .envrc  .gitattributes  .gitignore  .sops.yaml  LICENSE  devenv.nix  devenv.yaml  flake.nix  justfile  pyproject.toml  shell.nix  treefmt.nix
.claude/rules/: common.md  home-manager.md  hosts.md  lib.md  macos.md  nix-style.md  nixos.md  packages.md
.devcontainer/: Dockerfile  devcontainer.json  docker-bake.hcl
.github/workflows/: flux-local.yaml
.zed/: settings.json
common/: default.nix  nas.nix  server.nix
common/modules/: chrony.nix  filesystem.nix  ldap.nix  ldap.sops.env  ldap.sops.yaml  network.nix  openssh.nix  terminal.nix  zerotier.nix  zerotier.sops.yaml
common/optional/: nvidia.nix  podman.nix  virtualization.nix
common/users/: lab.nix
custom/pkgs/: default.nix
flake/: AGENTS.md  default.nix  deploy.nix  homes.nix  modules.nix  overlays.nix  packages.nix  systems.nix
flake/dev/: checks.nix  flake.nix  shells.nix  treefmt.nix
flake/lib/: AGENTS.md  default.nix  file.nix  module.nix  network.nix
homes/: AGENTS.md
kubernetes/: bootstrap.sops.yaml
lib/: AGENTS.md  consul.nix  default.nix  file.nix  module.nix  network.nix  overlay.nix  traefik.nix  zed.nix
mikrotik/: README.md
modules/: boot.nix  defaults.nix  den.nix  deploy.nix  formatter.nix  homebrew.nix  inputs.nix  mesh.nix  networking.nix  nh.nix  nix.nix  overlays.nix
overlays/: nixpkgs-unstable.nix
secrets/: authentik.sops.yaml  da.sops.yaml  default.nix  en.sops.yaml  secrets.sops.yaml  syncthing.sops.yaml  topology.sops.yaml  users.sops.yaml
src/: topology.yaml
(+1387 files in other folders)
