[project]
name = "homelab"
version = "0.1.0"
description = "CLI tools for managing some parts of my Homelab"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "John Muchovej", email = "jmuchovej@users.noreply.github.com" }
]
dependencies = [
  "cryptography>=46.0.3",
  "pydantic>=2.12.5",
  "rich>=14.2.0",
  "typer>=0.20.1",
  "typing-extensions>=4.15.0",
]

[project.scripts]
homelab = "homelab:cli"

[dependency-groups]
dev = [
  "ipython>=9.8.0",
  "mypy>=1.19.1",
  "ruff>=0.14.10",
  "ty>=0.0.5",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
